GEODE-5781: create new repeat test tasks per source set
and cleanup various bits of our Gradle files.

Co-authored-by: Dale Emery <demery@pivotal.io>
Co-authored-by: Patrick Rhomberg <prhomberg@pivotal.io>
Co-authored-by: Galen O'Sullivan <gosullivan@pivotal.io>